# AgrichemLabelTool

./: .gitignore  README.md  pyproject.toml  start.bat
data/corrections/: acvm_overrides.json  annotations.json  corrections.json  extraction_cache.json  label_texts_cache.json  learned_patterns.json  product_splits.json  verified.json
data/labels/: manifest.json
scripts/: fetch_missing_labels.py  generate_test_previous_season.py  inspect_catalogue.py  run_label_check.py  run_pipeline.py  validate_catalogue.py
src/: assembler.py  config.py  models.py
src/parsers/: acvm_csv.py  acvm_detail_scraper.py  changes_table.py  flagged_table.py  label_field_extractors.py  label_text_extractor.py  phi_table.py  rm_table.py
src/stages/: diff_seasons.py  enrich_acvm.py  extract_label_data.py  fetch_labels.py  match_acvm.py
src/utils/: hashing.py  phi_value_parser.py  rm_code_normalizer.py  rule_text_parser.py  slugify.py  storage_class.py
tests/: conftest.py  test_acvm_detail_scraper.py  test_acvm_matching.py  test_assembler.py  test_diff_engine.py  test_label_extractors.py  test_phi_value_parser.py  test_rule_text_parser.py  test_slugify.py  test_storage_class.py
tests/fixtures/: P007595.html  P008921.html
tests/integration/: test_pipeline_e2e.py
tool/: README.md  app.py  pattern_engine.py
tool/static/: app.js  index.html  styles.css
