[project]
name = "nz-catalogue"
version = "0.1.0"
description = "NZW Vineyard Spray Schedule PDF parser and product catalogue pipeline"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pydantic>=2.7",
    "typer[all]>=0.12",
    "rich>=13",
    "orjson>=3.10",
    "httpx>=0.28",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require the actual PDF (deselect with '-m \"not integration\"')",
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
